--- a/src/pages/services/dishwasher-repair-los-angeles.astro
+++ b/src/pages/services/dishwasher-repair-los-angeles.astro
@@ -10,31 +10,55 @@ import Arrow from "@components/js/arrow-phone.astro";
 import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
+import ContactForm from "@components/contact-form.astro";
+
 
 import "css/service/style_services.css";
 ---
 
 <Navbar />
 <Reviews />
-<Layout title="Dishwasher Repair Los Angeles">
+<Layout title="Dishwasher Repair Los Angeles and Nearby Areas">
   <Container>
+
     <main>
       <div class="page-header">
+
         <div class="page-header-d-full">
           <div class="page-header-d">
-            <h1><span class="animate-charcter">Dishwasher Repair</span></h1>
-            <Contactbtn />
+            <h1>
+              <span class="animate-charcter">Dishwasher Repair Los Angeles and Nearby Areas</span>
+            </h1>
           </div>
         </div>
 
         <div class="page-header-f">
-          <img
+
+          <div class="page-header-f-rel">
+            <img
             src="/dishwasher/page_header_photos-dishwasher.webp"
             alt="Dishwasher Repair"
             loading="lazy"
-          />
+            />
+          </div>
+
+          <div class="page-header-f-gradient">
+          </div>
+
         </div>
+
+        <div class="page-header-p-full refrigerator-page-header-p-full">
+          <div class="page-header-p">
+          <p>Having problems with your dishwasher? We are definitely the best team to fix it, and we will solve all your appliance related problems! Why do we claim to be the best? It is not just us. Our well pleased customers, who call us back and keep recommending us to their friends and family, are proof of our quality dishwasher repair services. If you search for dishwasher repair Los Angeles, you will find many appliance repair companies that promise to deliver, and not many of them actually do. </p>
+          <p>To protect our customers, we ensure that our repairmen undergo extensive training in dishwasher repairs, installation, and maintenance. We also strive to protect our customers by being an insured and licensed appliance repair company with a warranty. Providing a warranty gives our clients peace of mind, and they can call us back with a dishwasher issue within three months after the repair. Repairing your dishwasher is as important to us as it is to you. We strive to provide absolutely the best services in repairing your washer. This is why we promise a full refund if we cannot repair it.</p>
+          </div>
+        </div>
+
       </div>
+    </main>
+
+
+
 
       <div class="page213">
         <div class="open-full_left">
@@ -59,7 +83,7 @@ import "css/service/style_services.css";
         <div class="full_left_menu_r">
           <div class="list_left">
             <a href="#left-menu-1">
-              <h2>Dishwasher Repair</h2>
+              <h2>Contact Form</h2>
             </a>
           </div>
 
@@ -156,34 +180,7 @@ import "css/service/style_services.css";
         <div class="page213-container">
           <div class="page213-content" id="left-menu-1">
             <div class="content__page-desc">
-              <p>
-                The cost to repair a dishwasher can vary widely depending on
-                several factors, including the nature of the problem, the brand
-                of the appliance, and your location. On average, a service call
-                to diagnose the issue can range from <b>$75 to $150</b>. This
-                initial fee typically covers the first visit and basic
-                troubleshooting to identify the problem. If parts need to be
-                replaced or more extensive repairs are required, the total cost
-                can increase significantly. For instance, replacing a faulty
-                motor or water pump can cost anywhere from <b>$200 to $600</b>,
-                while more minor repairs, such as fixing a door latch, might
-                only add <b>$50 to $100</b> to the service call fee.
-              </p>
-
-              <p>
-                Given the potential expenses, it's important to weigh the cost
-                of repairs against the price of purchasing a new dishwasher.
-                Most dishwashers have a lifespan of around 10-15 years, so if
-                your machine is approaching this age, it might be more
-                cost-effective to invest in a new appliance rather than
-                continually paying for repairs. Additionally, frequent
-                breakdowns can lead to more hand washing and inconvenience, not
-                to mention the risk of water damage to your floor if the
-                dishwasher is not operating correctly. Regular maintenance and
-                prompt attention to minor issues can help extend the life of
-                your dishwasher and reduce the likelihood of needing costly
-                repairs.
-              </p>
+              <ContactForm />
             </div>
           </div>
 
@@ -998,6 +995,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/bosch.webp"
                       alt="Bosch"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1009,6 +1007,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/whirlpool.webp"
                       alt="Whirlpool"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1020,6 +1019,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/kitchenAid.webp"
                       alt="KitchenAid"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1031,6 +1031,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/maytag.webp"
                       alt="Maytag"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1042,6 +1043,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/samsung.webp"
                       alt="Samsung"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1053,6 +1055,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/lg.webp"
                       alt="LG"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1064,6 +1067,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/GE-general-electric.webp"
                       alt="General Electric"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1075,6 +1079,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/frigidaire.webp"
                       alt="Frigidaire"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1086,6 +1091,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/miele.webp"
                       alt="Miele"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1097,6 +1103,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/electrolux.webp"
                       alt="Electrolux"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1108,6 +1115,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/kenmore.webp"
                       alt="Kenmore"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1119,6 +1127,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/cove.webp"
                       alt="cove"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1130,6 +1139,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/thermador.webp"
                       alt="thermadore"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1141,6 +1151,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/fisher-paykel.webp"
                       alt="Fisher & Paykel"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -2789,7 +2800,6 @@ import "css/service/style_services.css";
           </div>
         </div>
       </div>
-    </main>
     <Cta />
   </Container>
 
