--- a/src/pages/services/wine-cellar-repair-los-angeles.astro
+++ b/src/pages/services/wine-cellar-repair-los-angeles.astro
@@ -10,33 +10,56 @@ import Arrow from "@components/js/arrow-phone.astro";
 import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
+import ContactForm from "@components/contact-form.astro";
+
 
 import "css/service/style_services.css";
 ---
 
 <Navbar />
 <Reviews />
-<Layout title="Wine Cellar Repair Los Angeles">
+<Layout title="Wine Cellar Repair Los Angeles and Nearby Areas">
   <Container>
     <main>
       <div class="page-header">
-        <div class="page-header-d-full wine-cellar-page-header-d-full">
+
+        <div class="page-header-d-full">
           <div class="page-header-d">
             <h1>
-              <span class="animate-charcter">Wine Cellar <br />Repair</span>
+              <span class="animate-charcter">Wine Cellar Repair Los Angeles and Nearby Areas</span>
             </h1>
-            <Contactbtn />
           </div>
         </div>
 
         <div class="page-header-f">
-          <img
+
+          <div class="page-header-f-rel">
+            <img
             src="/wine-сellar/wine-сellar-page_header_photos.webp"
             alt="Wine Cellar Repair"
             loading="lazy"
           />
+          </div>
+
+          <div class="page-header-f-gradient">
+          </div>
+
         </div>
+
+        <div class="page-header-p-full">
+          <div class="page-header-p">
+          <p>Having problems with your wine cellar? We are definitely the best team to fix it, and we will solve all your appliance related problems! Why do we claim to be the best? It is not just us. Our well pleased customers, who call us back and keep recommending us to their friends and family, are proof of our quality wine cellar repair services. If you search for wine cellar repair Los Angeles, you will find many appliance repair companies that promise to deliver, and not many of them actually do. </p>
+          <p>To protect our customers, we ensure that our repairmen undergo extensive training in wine cellar repairs, installation, and maintenance. We also strive to protect our customers by being an insured and licensed appliance repair company with a warranty. Providing a warranty gives our clients peace of mind, and they can call us back with a wine cellar issue within three months after the repair. Repairing your wine cellar is as important to us as it is to you. We strive to provide absolutely the best services in repairing your washer. This is why we promise a full refund if we cannot repair it.</p>
+          </div>
+        </div>
+
       </div>
+    </main>
+
+
+
+
+
 
       <div class="page213">
         <div class="open-full_left">
@@ -61,7 +84,7 @@ import "css/service/style_services.css";
         <div class="full_left_menu_r">
           <div class="list_left">
             <a href="#left-menu-1">
-              <h2>Wine Cellar Repair</h2>
+              <h2>Contact Form</h2>
             </a>
           </div>
 
@@ -151,17 +174,12 @@ import "css/service/style_services.css";
         </div>
 
         <div class="page213-container">
-          <div class="page213-content" id="left-menu-1">
-            <div class="content__page-desc">
-              <p>
-                When it comes to repairing a wine cellar, costs can vary widely depending on the extent of the damage and the level of customization required. Basic repairs, such as fixing minor leaks or replacing damaged insulation, might cost anywhere from <b>$200 to $500</b>. However, if your wine cellar has more severe issues like structural damage or extensive mold growth, you could be looking at costs upwards of <b>$1,000 to $5,000</b>. High-end materials and specialized labor can drive these costs even higher, especially if your wine cellar features custom woodwork or advanced climate control systems.
-              </p>
 
-              <p>
-                For those seeking to upgrade or completely refurbish their wine cellars, the investment can be significantly higher. Custom shelving, humidity control systems, and aesthetic enhancements like LED lighting or glass doors can add several thousand dollars to your bill. Typically, a moderate refurbishment might range from <b>$5,000 to $10,000</b> while a high-end upgrade could easily exceed <b>$20,000</b>. It's essential to get a detailed estimate from a qualified contractor who specializes in wine cellars to understand the full scope and cost of your project. Investing in quality repairs and upgrades ensures that your wine collection is stored in optimal conditions, preserving its value and enhancing your overall experience.
-              </p>
-            </div>
+           <div class="page213-content" id="left-menu-1">
+          <div class="content__page-desc">
+            <ContactForm />
           </div>
+        </div>
 
           <div class="page213-content" id="left-menu-2">
             <div class="content__page-full-hed">
@@ -607,6 +625,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/sub-zero.webp"
                       alt="Sub-Zero"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -618,6 +637,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/viking.webp"
                       alt="Viking"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -629,6 +649,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/thermador.webp"
                       alt="Thermador"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -640,6 +661,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/u-line.webp"
                       alt="U-Line"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -651,6 +673,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/marvel.webp"
                       alt="Marvel"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -662,6 +685,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/vinotemp.webp"
                       alt="Vinotemp"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -673,6 +697,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/euroCave.webp"
                       alt="EuroCave"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -684,6 +709,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/liebherr.webp"
                       alt="Liebherr"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -695,6 +721,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/danby.webp"
                       alt="Danby"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -706,6 +733,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/haier.webp"
                       alt="Haier"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -717,6 +745,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/edgeStar.webp"
                       alt="EdgeStar"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -728,6 +757,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/avanti.webp"
                       alt="Avanti"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -739,6 +769,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/summit.webp"
                       alt="Summit"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -750,6 +781,7 @@ import "css/service/style_services.css";
                       height="300px"
                       src="/brand-logos/wine-enthusiast.webp"
                       alt="Wine Enthusiast"
+                      loading="lazy"
                     />
                   </a>
                 </div>
@@ -1834,7 +1866,6 @@ import "css/service/style_services.css";
           </div>
         </div>
       </div>
-    </main>
     <Cta />
   </Container>
 
