--- a/src/pages/services/wine-cooler-repair-los-angeles.astro
+++ b/src/pages/services/wine-cooler-repair-los-angeles.astro
@@ -10,31 +10,56 @@ import Arrow from "@components/js/arrow-phone.astro";
 import Focus from "@components/js/focus-menu.astro";
 import Faqs from "@components/js/faqs.astro";
 import LogoBrands from "@components/js/logo-brands.astro";
+import ContactForm from "@components/contact-form.astro";
+
 
 import "css/service/style_services.css";
 ---
 
 <Navbar />
 <Reviews />
-<Layout title="Wine Cooler Repair Los Angeles">
+<Layout title="Wine Cooler Repair Los Angeles and Nearby Areas">
   <Container>
     <main>
       <div class="page-header">
-        <div class="page-header-d-full wine-cooler-page-header-d-full">
+
+        <div class="page-header-d-full">
           <div class="page-header-d">
-            <h1><span class="animate-charcter">Wine Cooler <br>Repair</span></h1>
-            <Contactbtn />
+            <h1>
+              <span class="animate-charcter">Wine Cooler Repair Los Angeles and Nearby Areas</span>
+            </h1>
           </div>
         </div>
 
         <div class="page-header-f">
-          <img
+
+          <div class="page-header-f-rel">
+            <img
             src="/commercial-wine-cooler/wine-cooler-page_header_photos.webp"
             alt="Wine Cooler Repair"
             loading="lazy"
-          />
+            />
+          </div>
+
+          <div class="page-header-f-gradient">
+          </div>
+
         </div>
+
+        <div class="page-header-p-full">
+          <div class="page-header-p">
+          <p>Having problems with your wine cooler? We are definitely the best team to fix it, and we will solve all your appliance related problems! Why do we claim to be the best? It is not just us. Our well pleased customers, who call us back and keep recommending us to their friends and family, are proof of our quality wine cooler repair services. If you search for wine cooler repair Los Angeles, you will find many appliance repair companies that promise to deliver, and not many of them actually do. </p>
+          <p>To protect our customers, we ensure that our repairmen undergo extensive training in wine cooler repairs, installation, and maintenance. We also strive to protect our customers by being an insured and licensed appliance repair company with a warranty. Providing a warranty gives our clients peace of mind, and they can call us back with a wine cooler issue within three months after the repair. Repairing your wine cooler is as important to us as it is to you. We strive to provide absolutely the best services in repairing your washer. This is why we promise a full refund if we cannot repair it.</p>
+          </div>
+        </div>
+
       </div>
+    </main>
+
+
+
+
+
 
       <div class="page213">
         <div class="open-full_left">
@@ -59,7 +84,7 @@ import "css/service/style_services.css";
         <div class="full_left_menu_r">
           <div class="list_left">
             <a href="#left-menu-1">
-              <h2>Wine Cooler Repair</h2>
+              <h2>Contact Form</h2>
             </a>
           </div>
 
@@ -152,12 +177,7 @@ import "css/service/style_services.css";
         <div class="page213-container">
           <div class="page213-content" id="left-menu-1">
             <div class="content__page-desc">
-              <p>
-                If you’re experiencing issues with your wine cooler, it’s essential to address them promptly to ensure your collection remains at the optimal temperature. At Same Day Appliance Repair, we specialize in wine cooler repairs and offer competitive pricing to make the process as smooth as possible for you. The cost of repairing a wine cooler can vary depending on the issue's complexity, the parts required, and the cooler's make and model. On average, minor repairs such as fixing a thermostat or replacing a door seal can range from <b>$100 to $250</b>. More complex issues, such as compressor or motor replacements, may cost between <b>$300 and $500</b>.
-              </p>
-              <p>
-                We understand that unexpected appliance repairs can strain your budget, which is why we offer transparent pricing and detailed estimates before beginning any work. Our technicians are trained to diagnose problems quickly and accurately, ensuring you only pay for the necessary repairs. We also provide a warranty on our parts and labor, giving you peace of mind that your wine cooler will continue to perform optimally long after the repair is completed. For precise pricing tailored to your specific situation, don’t hesitate to contact Same Day Appliance Repair for a consultation and estimate.
-              </p>
+              <ContactForm />
             </div>
           </div>
 
@@ -2319,7 +2339,6 @@ import "css/service/style_services.css";
           </div>
         </div>
       </div>
-    </main>
     <Cta />
   </Container>
 
